Fix firefox layout issues by rounding.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -34,6 +34,7 @@ body,
     border: 0;
     width: 100%;
     height: 100%;
+    vertical-align: top;
 }
 
 .gallery-row {
